logs/pyloganalyser.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyLogAnalyser-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/loganalyser'...
Compiling './lib/python3.5/site-packages/loganalyser/PyLogAnalyser.py'...
***   File "./lib/python3.5/site-packages/loganalyser/PyLogAnalyser.py", line 193
    except KeyboardInterrupt, key_interr:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/loganalyser/Rule.py'...
***   File "./lib/python3.5/site-packages/loganalyser/Rule.py", line 792
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/loganalyser/__optcheck__.py'...
***   File "./lib/python3.5/site-packages/loganalyser/__optcheck__.py", line 55
    print about_msg
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/loganalyser/android'...
Compiling './lib/python3.5/site-packages/loganalyser/android/cat.py'...
***   File "./lib/python3.5/site-packages/loganalyser/android/cat.py", line 18
    print input_line.strip()
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/loganalyser/handler'...
Compiling './lib/python3.5/site-packages/loganalyser/handler/StdoutHandlerLinux.py'...
***   File "./lib/python3.5/site-packages/loganalyser/handler/StdoutHandlerLinux.py", line 51
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/loganalyser/handler/StdoutHandlerWindows.py'...
***   File "./lib/python3.5/site-packages/loganalyser/handler/StdoutHandlerWindows.py", line 148
    print string,
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/loganalyser/logs'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
